force-app/main/default/objects/Appointment__c/fields/AppointmentStatus__c.field-meta.xml
<CustomField>
    <fullName>AppointmentStatus__c</fullName>
    <label>AppointmentStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>