force-app/main/default/objects/Appointment__c/fields/AppointmentTime__c.field-meta.xml
<CustomField>
    <fullName>AppointmentTime__c</fullName>
    <label>AppointmentTime</label>
    <type>Time</type>
</CustomField>